updated links to ReadME and added CSS code

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,2 +1,34 @@
 header {
+  color: aliceblue;
+  background-color: blue;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  font-size: 2em;
+  margin: 15px;
+  padding: 10px;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 15px;
+  padding: 10px;
+}
+
+.card-header {
+  color: white;
+  background-color: aqua;
+}
+
+.list-group {
+  color: black;
+}
+
+list-group-item {
+  white-space: nowrap;
+  overflow: visible;
+}
+#email {
+  color: blue;
 }
